--- a/dropdown.html
+++ b/dropdown.html
@@ -3,23 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workout Menu</title>
-    <style>
-        
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Workout Menu</h1>
-    <div class="dropdown">
-        <button class="dropbtn">Select Workout</button>
-        <div class="dropdown-content">
-            <a href="#">Push-ups</a>
-            <a href="#">Squats</a>
-            <a href="#">Plank</a>
-            <a href="#">Lunges</a>
-            <a href="#">Crunches</a>
-            <a href="#">Jumping Jacks</a>
-        </div>
-    </div>
+    <h1>workouts list</h1>
+    <details>
+        <summary>Push-ups</summary>
+        <p>Push-ups work the chest, shoulders, and triceps. They are an effective bodyweight exercise for building upper body strength. Get in a high plank position with hands slightly wider than shoulder width. Lower your chest by bending elbows and push back up by straightening arms. Aim for 2-3 sets of 10-15 reps to fatigue your chest. You can elevate feet on a box to make them harder or try clapping push-ups between each repetition. Regular push-up workouts provide a simple and effective way to strengthen your upper body.
+
+
+
+
+
+        </p>
+    </details>
+    <details>
+        <summary>Squats</summary>
+        <p>Squats work the glutes, quads, and hamstrings for lower body strength. Stand with feet hip-width apart and toes out slightly. Push hips back and bend knees to lower until thighs are parallel. Keep back straight and core engaged as you push through heels to return to start. Bodyweight squats can be made challenging by adding dumbbells or a barbell. Complete 2-3 sets of 10-15 reps to strengthen the lower body. Squats provide an effective full-body workout with just your own weight</p>
+    </details>
+    <details>
+        <summary>Plank</summary>
+        <p>Planks strengthen the abs, back, and shoulders. Balance on your toes and forearms with elbows below shoulders. Maintain a straight line from head to heels, contracting your abs. Hold the static position for 30-60 seconds to start, avoiding back sag or arch. Over time build up to a minute or longer. Lift a leg or arm to increase difficulty. Daily planking, even brief sessions, builds a strong core to support overall body stability and strength.</p>
+    </details>
+    <details>
+        <summary>Lunges</summary>
+        <p>Lunges are a lower-body exercise that target the quadriceps, hamstrings, glutes and calves. Stand with feet hip-width apart, then step one leg forward and lower your body until both knees are bent at 90-degree angles. Your front knee should not extend past your ankle. Push back up and repeat on the opposite leg. For more challenging lunges, hold dumbbells at your sides or raise your arms out in front of you. Aim for 2-3 sets of 10-15 lunges per leg to strengthen and sculpt your lower body. Lunges are versatile and can be done anywhere to build functional strength.</p>
+    </details>
+    <details>
+        <summary>Crunches</summary>
+        <p>Crunches work the abdominal muscles. Lie on your back with knees bent and feet flat. Clasp hands behind head with elbows out. Slowly curl upper body upwards by contracting abs until shoulder blades lift off the floor. Hold briefly then lower back down in a controlled motion. Focus on using abs, not momentum, to lift torso. Complete 2-3 sets of 10-15 reps. For variation, extend legs straight or raise knees towards chest. Crunches are a classic abdominal exercise that can be done anywhere to strengthen and tone the core muscles.</p>
+    </details>
+    <details>
+        <summary>Jumping Jacks</summary>
+        <p>Jumping jacks provide a full-body cardio workout. Stand with feet together and hands at sides. Jump while spreading legs wide and raising arms overhead, then return to start. This motion engages the entire body as the lower half squats and arms move outward. Effective for elevating heart rate quickly without equipment, aim for 2-3 minutes of continuous jacks. The versatile jumping jack burns calories through a challenging full-body movement</p>
+    </details>
 </body>
 </html>
